fixing css for overflow and page overlaps

--- a/style.css
+++ b/style.css
@@ -43,22 +43,26 @@ a {
 }
 
 #about {
+    display: flexbox;
+    padding-bottom: 200px;
     width: 100vw;
     height: 100vh;
     background-color: lightpink;
     padding-top: 70px;
+    margin-right: 50px;
 }
 #top {
     margin-left: 50px;
-    max-width: 700px;
+    max-width: 800px;
 }
 #aboutme_p {
     border: solid;
     border-width: 3px;
     border-color: brown;
     padding: 7px;
-    border-radius: 10px;
-    margin-right: 15px;
+    border-radius: 5px;
+    margin-right: 50px;
+    overflow-x: auto;
 }
 #mycomic {
     margin-left: 50px;
@@ -70,6 +74,7 @@ a {
 
 
 #contact {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -99,7 +104,5 @@ html {
     margin-top: -350px;
 }
 
-#contact {
-}
 
 }
